--- a/Arduino-Alarm/MainWindow.xaml
+++ b/Arduino-Alarm/MainWindow.xaml
@@ -2,11 +2,109 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Arduino_Alarm"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        Title="Enjoy your sleep. Take a time."
+        Width="525"
+        Height="350"
+        mc:Ignorable="d">
     <Grid>
-        
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                <GradientStop Offset="0.368" Color="#FF3A1D1D" />
+                <GradientStop Offset="1" Color="#FF763232" />
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="309*" />
+            <ColumnDefinition Width="155*" />
+            <ColumnDefinition Width="53*" />
+        </Grid.ColumnDefinitions>
+        <Button x:Name="Set Alarm"
+                Width="86"
+                Height="79"
+                Margin="26,199,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FF62E08A"
+                BorderBrush="#FFD48E8E"
+                Click="button_Click"
+                Content="Set Alarm"
+                ForceCursor="False"
+                Foreground="White"
+                OpacityMask="Black" />
+        <Button x:Name="Initial_Set"
+                Width="120"
+                Height="43"
+                Margin="117,235,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FFB155BF"
+                BorderBrush="#FFD48E8E"
+                Click="button_Click"
+                Content="Initian Settings"
+                ForceCursor="False"
+                Foreground="White"
+                OpacityMask="Black" />
+        <Button x:Name="Set_priorities"
+                Grid.ColumnSpan="2"
+                Width="212"
+                Height="43"
+                Margin="242,235,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FF44ABBB"
+                BorderBrush="#FFD48E8E"
+                Click="button_Click"
+                Content="Set Priorities"
+                ForceCursor="False"
+                Foreground="White"
+                OpacityMask="Black" />
+        <Label x:Name="label"
+               Grid.ColumnSpan="2"
+               Width="334"
+               Height="68"
+               Margin="26,74,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="EASY ALARM"
+               FontSize="32"
+               Foreground="White" />
+        <Button x:Name="Manual_Set"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Width="338"
+                Height="31"
+                Margin="117,199,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FFE6D673"
+                BorderBrush="#FFD48E8E"
+                Click="button_Click"
+                Content="Manual Settings "
+                ForceCursor="False"
+                Foreground="White"
+                OpacityMask="Black" />
+        <Button x:Name="button"
+                Grid.Column="1"
+                Grid.ColumnSpan="2"
+                Width="317"
+                Height="31"
+                Margin="33,144,-142,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FF8B5656"
+                Content="More Info"
+                Foreground="White"
+                RenderTransformOrigin="0.5,0.5">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform />
+                    <SkewTransform />
+                    <RotateTransform Angle="89.944" />
+                    <TranslateTransform />
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
     </Grid>
 </Window>
