--- a/Arduino-Alarm/SetAlarm/SetAlarmView.xaml
+++ b/Arduino-Alarm/SetAlarm/SetAlarmView.xaml
@@ -1,13 +1,12 @@
-﻿<Window x:Class="Arduino_Alarm.First_Settings.FirstSettings"
+﻿<Window x:Class="Arduino_Alarm.Window1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Arduino_Alarm.First_Settings"
+        xmlns:local="clr-namespace:Arduino_Alarm"
         mc:Ignorable="d"
-        Title="FirstSettings" Height="300" Width="300">
+        Title="Window1" Height="300" Width="300">
     <Grid>
-        <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="-221,102,0,0" VerticalAlignment="Top"/>
-
+        
     </Grid>
 </Window>
