--- a/Arduino-Alarm/Manual Settings/ManualView.xaml
+++ b/Arduino-Alarm/Manual Settings/ManualView.xaml
@@ -2,11 +2,33 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:local="clr-namespace:Arduino_Alarm.Manual_Settings"
-        mc:Ignorable="d"
-        Title="ManualView" Height="300" Width="300">
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        Title="Manual Settings"
+        Width="300"
+        Height="300"
+        mc:Ignorable="d">
     <Grid>
-        
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                <GradientStop Offset="0.368" Color="#FF3A1D1D" />
+                <GradientStop Offset="1" Color="#FF763232" />
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Label x:Name="label" Content="SET TIME" FontSize="32"
+               Foreground="White" HorizontalAlignment="Left" Margin="10,91,0,0" VerticalAlignment="Top"/>
+        <xctk:MaskedTextBox 
+         x:Name="CNIC"                                
+            CaretIndex="0" 
+            Mask="00:00"
+            Margin="178,0,30,139" 
+            FontSize="14.667" Height="26" VerticalAlignment="Bottom" TextAlignment="Center"
+            Background="#FFE6D673"
+            BorderBrush="#FFD48E8E" FontFamily="Arial Unicode MS" Foreground="#FFD68080"/>
+        <Button x:Name="button" Content="OK" HorizontalAlignment="Left" Margin="10,206,0,0" VerticalAlignment="Top" Width="126" Background="#FF8B5656"
+            BorderBrush="#FFD48E8E" BorderThickness="0" Foreground="White"/>
+        <Button x:Name="button1" Content="Cancel" HorizontalAlignment="Left" Margin="162,206,0,0" VerticalAlignment="Top" Width="120" Background="#FF8B5656"
+            BorderBrush="#FFD48E8E" Foreground="White"/>
     </Grid>
 </Window>
