--- a/Arduino-Alarm/First Settings/FirstSettings.xaml
+++ b/Arduino-Alarm/First Settings/FirstSettings.xaml
@@ -2,12 +2,97 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Arduino_Alarm.First_Settings"
-        mc:Ignorable="d"
-        Title="FirstSettings" Height="300" Width="300">
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        Title="Initial Settings"
+        Width="300"
+        Height="300"
+        mc:Ignorable="d">
     <Grid>
-        <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="-221,102,0,0" VerticalAlignment="Top"/>
-
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                <GradientStop Offset="0.368" Color="#FF3A1D1D" />
+                <GradientStop Offset="1" Color="#FF763232" />
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Grid.ColumnDefinitions />
+        <Button x:Name="button"
+                Width="126"
+                Margin="10,218,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FF8B5656"
+                BorderBrush="#FFD48E8E"
+                BorderThickness="0"
+                Content="OK"
+                Foreground="White" />
+        <Button x:Name="button1"
+                Width="120"
+                Margin="162,218,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FF8B5656"
+                BorderBrush="#FFD48E8E"
+                Content="Cancel"
+                Foreground="White" />
+        <Label x:Name="Adress"
+               Margin="10,10,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Enter your address"
+               FontSize="13.333"
+               Foreground="White" />
+        <Label x:Name="GetReady"
+               Width="246"
+               Height="29"
+               Margin="10,139,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Enter time that you need to get ready"
+               FontSize="13.333"
+               Foreground="White" />
+        <Label x:Name="GetReady_Copy"
+               Width="216"
+               Height="29"
+               Margin="10,66,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Choose mean of transport"
+               FontSize="13.333"
+               Foreground="White" />
+        <TextBox x:Name="textBox"
+                 Width="147"
+                 Height="23"
+                 Margin="135,38,0,0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 Background="#FFB155BF"
+                 BorderBrush="#FFD48E8E"
+                 Foreground="White"
+                 Text="Your address..."
+                 TextAlignment="Right"
+                 TextWrapping="Wrap" />
+        <xctk:MaskedTextBox x:Name="MaskedTextBox"
+                            Height="26"
+                            Margin="197,0,10,71"
+                            VerticalAlignment="Bottom"
+                            Background="#FFB155BF"
+                            BorderBrush="#FFD48E8E"
+                            CaretIndex="0"
+                            FontFamily="Arial Unicode MS"
+                            FontSize="14.667"
+                            Foreground="White"
+                            Mask="00:00"
+                            TextAlignment="Center" />
+        <ComboBox x:Name="comboBox"
+                  Width="120"
+                  Margin="162,100,0,0"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Top"
+                  Background="#FFB155BF"
+                  BorderBrush="#FFD48E8E"
+                  BorderThickness="0"
+                  Foreground="White" />
     </Grid>
 </Window>
