--- a/Arduino-Alarm/Manual Settings/ManualView.xaml
+++ b/Arduino-Alarm/Manual Settings/ManualView.xaml
@@ -19,7 +19,7 @@
         <Label x:Name="label" Content="SET TIME" FontSize="32"
                Foreground="White" HorizontalAlignment="Left" Margin="10,91,0,0" VerticalAlignment="Top"/>
         <xctk:MaskedTextBox 
-         x:Name="CNIC"                                
+         x:Name="MaskedTextBox"                                
             CaretIndex="0" 
             Mask="00:00"
             Margin="178,0,30,139" 
