--- a/Arduino-Alarm/Priorities/PrioritiesView.xaml
+++ b/Arduino-Alarm/Priorities/PrioritiesView.xaml
@@ -2,11 +2,49 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Arduino_Alarm"
-        mc:Ignorable="d"
-        Title="PrioritiesView" Height="300" Width="300">
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        Title="PrioritiesView"
+        Width="300"
+        Height="300"
+        mc:Ignorable="d">
     <Grid>
-        
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                <GradientStop Offset="0.368" Color="#FF3A1D1D" />
+                <GradientStop Offset="1" Color="#FF763232" />
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Button x:Name="button"
+                Width="126"
+                Margin="10,206,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FF8B5656"
+                BorderBrush="#FFD48E8E"
+                BorderThickness="0"
+                Content="OK"
+                Foreground="White" />
+        <Button x:Name="button1"
+                Width="120"
+                Margin="162,206,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FF8B5656"
+                BorderBrush="#FFD48E8E"
+                Content="Cancel"
+                Foreground="White" />
+        <ListView x:Name="listView"
+                  Width="221"
+                  Height="152"
+                  Margin="10,10,0,0"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Top">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn />
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </Window>
