--- a/Arduino-Alarm/First Settings/FirstSettings.xaml
+++ b/Arduino-Alarm/First Settings/FirstSettings.xaml
@@ -18,8 +18,8 @@
         </Grid.Background>
         <Grid.ColumnDefinitions />
         <Button x:Name="button"
-                Width="126"
-                Margin="10,218,0,0"
+                Width="120"
+                Margin="10,224,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Background="#FF8B5656"
@@ -29,7 +29,7 @@
                 Foreground="White" />
         <Button x:Name="button1"
                 Width="120"
-                Margin="162,218,0,0"
+                Margin="162,224,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Background="#FF8B5656"
@@ -37,7 +37,7 @@
                 Content="Cancel"
                 Foreground="White" />
         <Label x:Name="Adress"
-               Margin="10,10,0,0"
+               Margin="10,30,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Enter your address"
@@ -45,26 +45,26 @@
                Foreground="White" />
         <Label x:Name="GetReady"
                Width="246"
-               Height="29"
-               Margin="10,139,0,0"
+               Height="28"
+               Margin="10,97,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
-               Content="Enter time that you need to get ready"
+               Content="Set time to get ready"
                FontSize="13.333"
                Foreground="White" />
         <Label x:Name="GetReady_Copy"
                Width="216"
                Height="29"
-               Margin="10,66,0,0"
+               Margin="10,63,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
-               Content="Choose mean of transport"
+               Content="Choose transport"
                FontSize="13.333"
                Foreground="White" />
         <TextBox x:Name="textBox"
                  Width="147"
                  Height="23"
-                 Margin="135,38,0,0"
+                 Margin="135,33,0,0"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  Background="#FFB155BF"
@@ -74,11 +74,12 @@
                  TextAlignment="Right"
                  TextWrapping="Wrap" />
         <xctk:MaskedTextBox x:Name="MaskedTextBox"
-                            Height="26"
-                            Margin="197,0,10,71"
+                            Height="21"
+                            Margin="171,0,36,149"
                             VerticalAlignment="Bottom"
                             Background="#FFB155BF"
                             BorderBrush="#FFD48E8E"
+                            BorderThickness="0"
                             CaretIndex="0"
                             FontFamily="Arial Unicode MS"
                             FontSize="14.667"
@@ -86,8 +87,44 @@
                             Mask="00:00"
                             TextAlignment="Center" />
         <ComboBox x:Name="comboBox"
-                  Width="120"
-                  Margin="162,100,0,0"
+                  Width="147"
+                  Margin="135,70,0,0"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Top"
+                  Background="#FFB155BF"
+                  BorderBrush="#FFD48E8E"
+                  BorderThickness="0"
+                  Foreground="White" />
+        <Label x:Name="GetReady_Copy1"
+               Width="246"
+               Height="28"
+               Margin="10,130,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Choose your minor"
+               FontSize="13.333"
+               Foreground="White" />
+        <Label x:Name="GetReady_Copy2"
+               Width="246"
+               Height="28"
+               Margin="10,163,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Choose your subgroup"
+               FontSize="13.333"
+               Foreground="White" />
+        <ComboBox x:Name="comboBox_Copy"
+                  Width="147"
+                  Margin="135,136,0,0"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Top"
+                  Background="#FFB155BF"
+                  BorderBrush="#FFD48E8E"
+                  BorderThickness="0"
+                  Foreground="White" />
+        <ComboBox x:Name="comboBox_Copy1"
+                  Width="85"
+                  Margin="171,169,0,0"
                   HorizontalAlignment="Left"
                   VerticalAlignment="Top"
                   Background="#FFB155BF"
