--- a/Arduino-Alarm/Priorities/PrioritiesView.xaml
+++ b/Arduino-Alarm/Priorities/PrioritiesView.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:Arduino_Alarm"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Title="PrioritiesView"
+        Title="Set priorities"
         Width="300"
         Height="300"
         mc:Ignorable="d">
@@ -17,7 +17,7 @@
         </Grid.Background>
         <Button x:Name="button"
                 Width="126"
-                Margin="10,206,0,0"
+                Margin="10,224,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Background="#FF8B5656"
@@ -27,24 +27,65 @@
                 Foreground="White" />
         <Button x:Name="button1"
                 Width="120"
-                Margin="162,206,0,0"
+                Margin="162,224,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Background="#FF8B5656"
                 BorderBrush="#FFD48E8E"
                 Content="Cancel"
                 Foreground="White" />
-        <ListView x:Name="listView"
-                  Width="221"
-                  Height="152"
-                  Margin="10,10,0,0"
-                  HorizontalAlignment="Left"
-                  VerticalAlignment="Top">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn />
-                </GridView>
-            </ListView.View>
-        </ListView>
+        <ListBox x:Name="listBox"
+                 Width="126"
+                 Height="137"
+                 Margin="10,60,0,0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top">
+            <ListBox.Background>
+                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                    <GradientStop Offset="0.368" Color="#FF3A1D1D" />
+                    <GradientStop Offset="1" Color="#FF763232" />
+                </LinearGradientBrush>
+            </ListBox.Background>
+        </ListBox>
+        <ListBox x:Name="listBox_Copy"
+                 Width="120"
+                 Height="137"
+                 Margin="162,60,0,0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top">
+            <ListBox.Background>
+                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                    <GradientStop Offset="0.368" Color="#FF3A1D1D" />
+                    <GradientStop Offset="1" Color="#FF763232" />
+                </LinearGradientBrush>
+            </ListBox.Background>
+        </ListBox>
+        <Label x:Name="label"
+               Margin="91,10,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="CHOOSE SUBJECTS"
+               Foreground="White" />
+        <Label x:Name="label1"
+               Margin="5,34,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Very important subjects"
+               Foreground="White" />
+        <Label x:Name="label2"
+               Margin="168,34,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Important subjects"
+               Foreground="White" />
+        <Button x:Name="button2"
+                Width="26"
+                Margin="136,118,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FF8B5656"
+                BorderBrush="#FFD48E8E"
+                BorderThickness="0"
+                Content="&gt;&gt;" />
     </Grid>
 </Window>
