--- a/Arduino-Alarm/SetAlarm/SetAlarmView.xaml
+++ b/Arduino-Alarm/SetAlarm/SetAlarmView.xaml
@@ -2,11 +2,136 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Arduino_Alarm"
-        mc:Ignorable="d"
-        Title="Window1" Height="300" Width="300">
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        Title="Window1"
+        Width="300"
+        Height="300"
+        mc:Ignorable="d">
     <Grid>
-        
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                <GradientStop Offset="0.368" Color="#FF3A1D1D" />
+                <GradientStop Offset="1" Color="#FF763232" />
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Grid.ColumnDefinitions />
+        <Button x:Name="button"
+                Width="120"
+                Margin="10,224,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FF8B5656"
+                BorderBrush="#FFD48E8E"
+                BorderThickness="0"
+                Content="OK"
+                Foreground="White" />
+        <Button x:Name="button1"
+                Width="120"
+                Margin="162,224,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FF8B5656"
+                BorderBrush="#FFD48E8E"
+                Content="Cancel"
+                Foreground="White" />
+        <Label x:Name="Adress"
+               Margin="10,30,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Enter your address"
+               FontSize="13.333"
+               Foreground="White" />
+        <Label x:Name="GetReady"
+               Width="246"
+               Height="28"
+               Margin="10,97,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Set time to get ready"
+               FontSize="13.333"
+               Foreground="White" />
+        <Label x:Name="GetReady_Copy"
+               Width="216"
+               Height="29"
+               Margin="10,63,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Choose transport"
+               FontSize="13.333"
+               Foreground="White" />
+        <TextBox x:Name="textBox"
+                 Width="147"
+                 Height="23"
+                 Margin="135,33,0,0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 Background="#FF62E08A"
+                 BorderBrush="#FFD48E8E"
+                 FontSize="13.333"
+                 Foreground="White"
+                 Text="Your address..."
+                 TextAlignment="Right"
+                 TextWrapping="Wrap" />
+        <xctk:MaskedTextBox x:Name="MaskedTextBox"
+                            Height="21"
+                            Margin="171,0,36,149"
+                            VerticalAlignment="Bottom"
+                            Background="#FF62E08A"
+                            BorderBrush="#FFD48E8E"
+                            BorderThickness="0"
+                            CaretIndex="0"
+                            FontFamily="Arial Unicode MS"
+                            FontSize="13.333"
+                            Foreground="White"
+                            Mask="00:00"
+                            Text="00:40"
+                            TextAlignment="Center" />
+        <ComboBox x:Name="comboBox"
+                  Width="147"
+                  Margin="135,70,0,0"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Top"
+                  Background="#FF62E08A"
+                  BorderBrush="#FFD48E8E"
+                  BorderThickness="0"
+                  Foreground="White" />
+        <Label x:Name="GetReady_Copy1"
+               Width="246"
+               Height="28"
+               Margin="10,130,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Choose your minor"
+               FontSize="13.333"
+               Foreground="White" />
+        <Label x:Name="GetReady_Copy2"
+               Width="246"
+               Height="28"
+               Margin="10,163,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Choose your subgroup"
+               FontSize="13.333"
+               Foreground="White" />
+        <ComboBox x:Name="comboBox_Copy"
+                  Width="147"
+                  Margin="135,136,0,0"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Top"
+                  Background="#FF62E08A"
+                  BorderBrush="#FFD48E8E"
+                  BorderThickness="0"
+                  Foreground="White" />
+        <ComboBox x:Name="comboBox_Copy1"
+                  Width="85"
+                  Margin="171,169,0,0"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Top"
+                  Background="#FF62E08A"
+                  BorderBrush="#FFD48E8E"
+                  BorderThickness="0"
+                  Foreground="White" />
     </Grid>
 </Window>
