--- a/Arduino-Alarm/Manual Settings/ManualView.xaml
+++ b/Arduino-Alarm/Manual Settings/ManualView.xaml
@@ -17,16 +17,16 @@
             </LinearGradientBrush>
         </Grid.Background>
         <Label x:Name="label" Content="SET TIME" FontSize="32"
-               Foreground="White" HorizontalAlignment="Left" Margin="10,91,0,0" VerticalAlignment="Top"/>
+               Foreground="White" HorizontalAlignment="Left" Margin="10,78,0,0" VerticalAlignment="Top"/>
         <xctk:MaskedTextBox 
          x:Name="MaskedTextBox"                                
             CaretIndex="0" 
             Mask="00:00"
             Text="{Binding SetTime}"
-            Margin="178,0,30,139" 
-            FontSize="14.667" Height="26" VerticalAlignment="Bottom" TextAlignment="Center"
+            Margin="178,0,30,152" 
+            FontSize="14.667" Height="23" VerticalAlignment="Bottom" TextAlignment="Center"
             Background="#FFE6D673"
-            BorderBrush="#FFD48E8E" FontFamily="Arial Unicode MS" Foreground="#FFD68080"/>
+            BorderBrush="#FFD48E8E" FontFamily="Arial Unicode MS" Foreground="#FFD68080" BorderThickness="0"/>
         <Button x:Name="OK" Content="OK" HorizontalAlignment="Left" Margin="10,206,0,0" VerticalAlignment="Top" Width="120" Background="#FF8B5656"
             BorderBrush="#FFD48E8E" BorderThickness="0" Foreground="White" Click="OK_Click"/>
         <Button x:Name="Cancel" Content="Cancel" HorizontalAlignment="Left" Margin="162,206,0,0" VerticalAlignment="Top" Width="120" Background="#FF8B5656"
