--- a/Arduino-Alarm/SetAlarm/SetAlarmView.xaml
+++ b/Arduino-Alarm/SetAlarm/SetAlarmView.xaml
@@ -69,9 +69,9 @@
                  VerticalAlignment="Top"
                  Background="#FF62E08A"
                  BorderBrush="#FFD48E8E"
+                 Text="{Binding Address}"
                  FontSize="13.333"
                  Foreground="White"
-                 Text="Your address..."
                  TextAlignment="Right"
                  TextWrapping="Wrap" />
         <xctk:MaskedTextBox x:Name="MaskedTextBox"
@@ -86,7 +86,7 @@
                             FontSize="13.333"
                             Foreground="White"
                             Mask="00:00"
-                            Text="00:40"
+                            Text="{Binding TimeToReady}"
                             TextAlignment="Center" />
         <ComboBox x:Name="comboBox"
                   Width="147"
@@ -95,6 +95,7 @@
                   VerticalAlignment="Top"
                   Background="#FF62E08A"
                   BorderBrush="#FFD48E8E"
+                  ItemsSource="{Binding Transport}"
                   BorderThickness="0"
                   Foreground="White" />
         <Label x:Name="GetReady_Copy1"
@@ -122,6 +123,7 @@
                   VerticalAlignment="Top"
                   Background="#FF62E08A"
                   BorderBrush="#FFD48E8E"
+                  ItemsSource="{Binding Minor}"
                   BorderThickness="0"
                   Foreground="White" />
         <ComboBox x:Name="comboBox_Copy1"
@@ -129,6 +131,7 @@
                   Margin="171,169,0,0"
                   HorizontalAlignment="Left"
                   VerticalAlignment="Top"
+                  ItemsSource="{Binding Subgroup}"
                   Background="#FF62E08A"
                   BorderBrush="#FFD48E8E"
                   BorderThickness="0"
