--- a/Arduino-Alarm/SetAlarm/SetAlarmView.xaml
+++ b/Arduino-Alarm/SetAlarm/SetAlarmView.xaml
@@ -25,8 +25,9 @@
                 Background="#FF8B5656"
                 BorderBrush="#FFD48E8E"
                 BorderThickness="0"
+                Click="OK_Click"
                 Content="OK"
-                Foreground="White" Click="OK_Click" />
+                Foreground="White" />
         <Button x:Name="Cancel"
                 Width="120"
                 Margin="162,224,0,0"
@@ -34,8 +35,9 @@
                 VerticalAlignment="Top"
                 Background="#FF8B5656"
                 BorderBrush="#FFD48E8E"
+                Click="Cancel_Click"
                 Content="Cancel"
-                Foreground="White" Click="Cancel_Click" />
+                Foreground="White" />
         <Label x:Name="Adress"
                Margin="10,30,0,0"
                HorizontalAlignment="Left"
@@ -69,10 +71,10 @@
                  VerticalAlignment="Top"
                  Background="#FF62E08A"
                  BorderBrush="#FFD48E8E"
-                 Text="{Binding Address}"
                  FontSize="13.333"
-                 Foreground="White"
-                 TextAlignment="Right"
+                 Foreground="Black"
+                 Text="{Binding Address}"
+                 TextAlignment="Center"
                  TextWrapping="Wrap" />
         <xctk:MaskedTextBox x:Name="MaskedTextBox"
                             Height="21"
@@ -84,7 +86,7 @@
                             CaretIndex="0"
                             FontFamily="Arial Unicode MS"
                             FontSize="13.333"
-                            Foreground="White"
+                            Foreground="Black"
                             Mask="00:00"
                             Text="{Binding TimeToReady}"
                             TextAlignment="Center" />
@@ -95,9 +97,11 @@
                   VerticalAlignment="Top"
                   Background="#FF62E08A"
                   BorderBrush="#FFD48E8E"
-                  ItemsSource="{Binding Transport}"
                   BorderThickness="0"
-                  Foreground="White" />
+                  Foreground="Black"
+                  ItemsSource="{Binding Path=Transport}"
+                  SelectedIndex="{Binding SelectedTransport,
+                                          Mode=TwoWay}" />
         <Label x:Name="GetReady_Copy1"
                Width="246"
                Height="28"
@@ -123,18 +127,22 @@
                   VerticalAlignment="Top"
                   Background="#FF62E08A"
                   BorderBrush="#FFD48E8E"
-                  ItemsSource="{Binding Minor}"
                   BorderThickness="0"
-                  Foreground="White" />
+                  Foreground="Black"
+                  ItemsSource="{Binding Path=Minor}"
+                  SelectedIndex="{Binding SelectedMinor,
+                                          Mode=TwoWay}" />
         <ComboBox x:Name="comboBox_Copy1"
                   Width="85"
                   Margin="171,169,0,0"
                   HorizontalAlignment="Left"
                   VerticalAlignment="Top"
-                  ItemsSource="{Binding Subgroup}"
                   Background="#FF62E08A"
                   BorderBrush="#FFD48E8E"
                   BorderThickness="0"
-                  Foreground="White" />
+                  Foreground="Black"
+                  ItemsSource="{Binding Path=Subgroup}"
+                  SelectedIndex="{Binding SelectedGroup,
+                                          Mode=TwoWay}" />
     </Grid>
 </Window>
