--- a/Arduino-Alarm/EnterSettings/SettingsView.xaml
+++ b/Arduino-Alarm/EnterSettings/SettingsView.xaml
@@ -5,9 +5,8 @@
         xmlns:local="clr-namespace:Arduino_Alarm"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="Window1"
-        Width="300"
-        Height="300"
+        Title="Set Alarm"
+        Height="350" Width="504"
         mc:Ignorable="d">
     <Grid>
         <Grid.Background>
@@ -16,72 +15,91 @@
                 <GradientStop Offset="1" Color="#FF763232" />
             </LinearGradientBrush>
         </Grid.Background>
-        <Grid.ColumnDefinitions />
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="247*" />
+            <ColumnDefinition Width="249*" />
+        </Grid.ColumnDefinitions>
+        <Label x:Name="label"
+               Width="171"
+               Height="54"
+               Margin="30,20,0,10"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="SET ALARM"
+               FontSize="32"
+               Foreground="White" />
         <Button x:Name="OK"
-                Width="120"
-                Margin="10,224,0,0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Background="#FF8B5656"
+                Width="108" 
+                Height="41" 
+                Margin="0,0,0,20" 
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom" 
+                Background="#FF62E08A"
                 BorderBrush="#FFD48E8E"
+                FontSize="18"
                 BorderThickness="0"
                 Click="OK_Click"
                 Content="OK"
                 Foreground="White" />
         <Button x:Name="Cancel"
-                Width="120"
-                Margin="162,224,0,0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Background="#FF8B5656"
+               HorizontalAlignment="Left"
+                Background="#FFB155BF"
+                Foreground="White"
+                Margin="9,0,0,20" 
+                VerticalAlignment="Bottom"
                 BorderBrush="#FFD48E8E"
+                Width="108" Height="41" FontSize="18"
                 Click="Cancel_Click"
-                Content="Cancel"
-                Foreground="White" />
+                Content="Cancel" Grid.Column="1"/>
         <Label x:Name="Adress"
-               Margin="10,30,0,0"
+               Margin="50,85,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Enter your address"
                FontSize="13.333"
-               Foreground="White" />
+               Foreground="White" Height="28" Width="120" />
         <Label x:Name="GetReady"
                Width="246"
                Height="28"
-               Margin="10,97,0,0"
+               Margin="50,152,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Set time to get ready"
                FontSize="13.333"
-               Foreground="White" />
+               Foreground="White" Grid.ColumnSpan="2" />
         <Label x:Name="GetReady_Copy"
                Width="216"
                Height="29"
-               Margin="10,63,0,0"
+               Margin="50,118,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Choose transport"
                FontSize="13.333"
                Foreground="White" />
         <TextBox x:Name="textBox"
+                 Grid.Column="1"
                  Width="147"
                  Height="23"
-                 Margin="135,33,0,0"
+                 Margin="0,88,0,0"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
-                 Background="#FF62E08A"
-                 BorderBrush="#FFD48E8E"
+                Background="#FFE6D673"
+                BorderBrush="#FFD48E8E"
                  FontSize="13.333"
                  Foreground="Black"
                  Text="{Binding Address}"
                  TextAlignment="Center"
-                 TextWrapping="Wrap" />
+                 TextWrapping="Wrap" Grid.ColumnSpan="2" />
         <xctk:MaskedTextBox x:Name="MaskedTextBox"
+                            Grid.Column="1"
                             Height="21"
-                            Margin="171,0,36,145"
-                            VerticalAlignment="Bottom"
-                            Background="#FF62E08A"
-                            BorderBrush="#FFD48E8E"
+                            Width="50"
+                            Margin="0,156,0,0"
+                            VerticalAlignment="Top"
+                            HorizontalAlignment="Left"
+                            Background="#FFE6D673"
+                BorderBrush="#FFD48E8E"
                             BorderThickness="0"
                             CaretIndex="0"
                             FontFamily="Arial Unicode MS"
@@ -91,58 +109,61 @@
                             Text="{Binding TimeToReady}"
                             TextAlignment="Center" />
         <ComboBox x:Name="comboBox"
+                  Grid.Column="1"
                   Width="147"
-                  Margin="135,70,0,0"
+                  Margin="0,125,0,0"
                   HorizontalAlignment="Left"
                   VerticalAlignment="Top"
-                  Background="#FF62E08A"
-                  BorderBrush="#FFD48E8E"
+                  Background="#FFE6D673"
+                BorderBrush="#FFD48E8E"
                   BorderThickness="0"
                   Foreground="Black"
                   ItemsSource="{Binding Path=Transport}"
                   SelectedIndex="{Binding SelectedTransport,
-                                          Mode=TwoWay}" />
+                                          Mode=TwoWay}" Grid.ColumnSpan="2" Height="22" />
         <Label x:Name="GetReady_Copy1"
                Width="246"
                Height="28"
-               Margin="10,130,0,0"
+               Margin="50,185,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Choose your minor"
                FontSize="13.333"
-               Foreground="White" />
+               Foreground="White" Grid.ColumnSpan="2" />
         <Label x:Name="GetReady_Copy2"
                Width="246"
                Height="28"
-               Margin="10,163,0,0"
+               Margin="50,218,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Choose your subgroup"
                FontSize="13.333"
-               Foreground="White" />
+               Foreground="White" Grid.ColumnSpan="2" />
         <ComboBox x:Name="comboBox_Copy"
+                  Grid.Column="1"
                   Width="147"
-                  Margin="135,136,0,0"
+                  Margin="0,191,0,0"
                   HorizontalAlignment="Left"
                   VerticalAlignment="Top"
-                  Background="#FF62E08A"
-                  BorderBrush="#FFD48E8E"
+                  Background="#FFE6D673"
+                BorderBrush="#FFD48E8E"
                   BorderThickness="0"
                   Foreground="Black"
                   ItemsSource="{Binding Path=Minor}"
                   SelectedIndex="{Binding SelectedMinor,
-                                          Mode=TwoWay}" />
+                                          Mode=TwoWay}" Grid.ColumnSpan="2" Height="22" />
         <ComboBox x:Name="comboBox_Copy1"
                   Width="85"
-                  Margin="171,169,0,0"
+                  Grid.Column="1"
+                  Margin="0,224,0,0"
                   HorizontalAlignment="Left"
                   VerticalAlignment="Top"
-                  Background="#FF62E08A"
-                  BorderBrush="#FFD48E8E"
+                  Background="#FFE6D673"
+                BorderBrush="#FFD48E8E"
                   BorderThickness="0"
                   Foreground="Black"
                   ItemsSource="{Binding Path=Subgroup}"
                   SelectedIndex="{Binding SelectedGroup,
-                                          Mode=TwoWay}" />
+                                          Mode=TwoWay}" Grid.ColumnSpan="2" Height="22" />
     </Grid>
 </Window>
