--- a/Arduino-Alarm/Priorities/PrioritiesView.xaml
+++ b/Arduino-Alarm/Priorities/PrioritiesView.xaml
@@ -5,8 +5,8 @@
         xmlns:local="clr-namespace:Arduino_Alarm"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="Set priorities"
-        Width="300"
-        Height="300"
+        Height="350"
+        Width="504"
         mc:Ignorable="d">
     <Grid>
         <Grid.Background>
@@ -15,39 +15,47 @@
                 <GradientStop Offset="1" Color="#FF763232" />
             </LinearGradientBrush>
         </Grid.Background>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="247*" />
+            <ColumnDefinition Width="249*" />
+        </Grid.ColumnDefinitions>
         <Button x:Name="OK"
-                Width="126"
-                Margin="10,224,0,0"
-                HorizontalAlignment="Left"
+                Margin="0,240,0,0"
+                HorizontalAlignment="Right"
                 VerticalAlignment="Top"
-                Background="#FF8B5656"
+                Width="108"
+                Height="41" 
+                Background="#FF62E08A"
                 BorderBrush="#FFD48E8E"
-                BorderThickness="0"
+                Foreground="White"
+                FontSize="18"
+                BorderThickness="0" 
                 Content="OK"
-                Foreground="White" Click="OK_Click" />
+                Click="OK_Click" />
         <Button x:Name="Cancel"
-                Width="120"
-                Margin="162,224,0,0"
+                Grid.Column="1"
+                Margin="10,240,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
-                Background="#FF8B5656"
+                Background="#FFB155BF"
+                Foreground="White"
                 BorderBrush="#FFD48E8E"
+                Width="108" 
+                Height="41" 
+                FontSize="18"
                 Content="Cancel"
-                Foreground="White" Click="Cancel_Click" />
+                Click="Cancel_Click" />
         <ListBox x:Name="listBox"
                  Width="126"
                  Height="137"
-                 Margin="10,60,0,0"
+                 Margin="91,75,0,0"
                  ItemsSource="{Binding List1}"
                  HorizontalAlignment="Left"
+                 BorderBrush="Transparent"
                  VerticalAlignment="Top"
+                 Background="Transparent"
                  SelectedItem="{Binding ItemsSelected}" SelectionMode="Multiple">
-            <ListBox.Background>
-                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                    <GradientStop Offset="0.368" Color="#FF3A1D1D" />
-                    <GradientStop Offset="1" Color="#FF763232" />
-                </LinearGradientBrush>
-            </ListBox.Background>
+   
         </ListBox>
         <ListBox x:Name="listBox_Copy"
                  Width="120"
@@ -66,32 +74,37 @@
             </ListBox.Background>
         </ListBox>
         <Label x:Name="label"
-               Margin="91,10,0,0"
-               HorizontalAlignment="Left"
+               Grid.ColumnSpan="2"
+               Margin="0,10,0,0"
+               HorizontalAlignment="Center"
                VerticalAlignment="Top"
                Content="CHOOSE SUBJECTS"
-               Foreground="White" />
+               Foreground="White"
+               FontSize="20" />
         <Label x:Name="label1"
-               Margin="5,34,0,0"
-               HorizontalAlignment="Left"
+               Grid.Column="0"
+               Margin="0,37,26,0"
+               HorizontalAlignment="Right"
                VerticalAlignment="Top"
                Content="Very important subjects"
                Foreground="White" />
         <Label x:Name="label2"
-               Margin="168,34,0,0"
+               Grid.Column="1"
+               Margin="26,37,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Important subjects"
                Foreground="White" />
         <Button x:Name="button2"
                 Width="26"
-                Margin="136,98,0,0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Background="#FF8B5656"
-                BorderBrush="#FFD48E8E"
+                Margin="0,0,0,20"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Background="#FF44ABBB"
+                Foreground="White"
+               
                 BorderThickness="0"
-                Content="&gt;&gt;" Click="button2_Click" />
+                Content="&gt;&gt;" Click="button2_Click" Grid.ColumnSpan="2" />
         <Button x:Name="button" Content="&lt;&lt;"
                 Width="26"
                 Visibility="Hidden"
