--- a/Arduino-Alarm/EnterSettings/SettingsView.xaml
+++ b/Arduino-Alarm/EnterSettings/SettingsView.xaml
@@ -6,7 +6,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="Set Alarm"
-        Height="350" Width="504"
+        Width="504"
+        Height="350"
         mc:Ignorable="d">
     <Grid>
         <Grid.Background>
@@ -30,36 +31,29 @@
                FontSize="32"
                Foreground="White" />
         <Button x:Name="OK"
-                Width="108" 
-                Height="41" 
-                Margin="0,0,0,20" 
+                Width="108"
+                Height="41"
+                Margin="0,0,0,20"
                 HorizontalAlignment="Right"
-                VerticalAlignment="Bottom" 
+                VerticalAlignment="Bottom"
                 Background="#FF62E08A"
                 BorderBrush="#FFD48E8E"
-                FontSize="18"
                 BorderThickness="0"
                 Click="OK_Click"
                 Content="OK"
+                FontSize="18"
                 Foreground="White" />
-        <Button x:Name="Cancel"
-               HorizontalAlignment="Left"
-                Background="#FFB155BF"
-                Foreground="White"
-                Margin="9,0,0,20" 
-                VerticalAlignment="Bottom"
-                BorderBrush="#FFD48E8E"
-                Width="108" Height="41" FontSize="18"
-                Click="Cancel_Click"
-                Content="Cancel" Grid.Column="1"/>
         <Label x:Name="Adress"
+               Width="120"
+               Height="28"
                Margin="50,85,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Enter your address"
                FontSize="13.333"
-               Foreground="White" Height="28" Width="120" />
+               Foreground="White" />
         <Label x:Name="GetReady"
+               Grid.ColumnSpan="2"
                Width="246"
                Height="28"
                Margin="50,152,0,0"
@@ -67,7 +61,7 @@
                VerticalAlignment="Top"
                Content="Set time to get ready"
                FontSize="13.333"
-               Foreground="White" Grid.ColumnSpan="2" />
+               Foreground="White" />
         <Label x:Name="GetReady_Copy"
                Width="216"
                Height="29"
@@ -77,29 +71,63 @@
                Content="Choose transport"
                FontSize="13.333"
                Foreground="White" />
+        <Label x:Name="GetReady_Copy1"
+               Grid.ColumnSpan="2"
+               Width="246"
+               Height="28"
+               Margin="50,185,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Choose your minor"
+               FontSize="13.333"
+               Foreground="White" />
+        <Label x:Name="GetReady_Copy2"
+               Grid.ColumnSpan="2"
+               Width="246"
+               Height="28"
+               Margin="50,218,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Content="Choose your subgroup"
+               FontSize="13.333"
+               Foreground="White" />
+        <Button x:Name="Cancel"
+                Grid.Column="1"
+                Width="108"
+                Height="41"
+                Margin="9,0,0,20"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"
+                Background="#FFB155BF"
+                BorderBrush="#FFD48E8E"
+                Click="Cancel_Click"
+                Content="Cancel"
+                FontSize="18"
+                Foreground="White" />
         <TextBox x:Name="textBox"
                  Grid.Column="1"
+                 Grid.ColumnSpan="2"
                  Width="147"
                  Height="23"
                  Margin="0,88,0,0"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
-                Background="#FFE6D673"
-                BorderBrush="#FFD48E8E"
+                 Background="#FFE6D673"
+                 BorderBrush="#FFD48E8E"
                  FontSize="13.333"
                  Foreground="Black"
                  Text="{Binding Address}"
                  TextAlignment="Center"
-                 TextWrapping="Wrap" Grid.ColumnSpan="2" />
+                 TextWrapping="Wrap" />
         <xctk:MaskedTextBox x:Name="MaskedTextBox"
                             Grid.Column="1"
-                            Height="21"
                             Width="50"
+                            Height="21"
                             Margin="0,156,0,0"
-                            VerticalAlignment="Top"
                             HorizontalAlignment="Left"
+                            VerticalAlignment="Top"
                             Background="#FFE6D673"
-                BorderBrush="#FFD48E8E"
+                            BorderBrush="#FFD48E8E"
                             BorderThickness="0"
                             CaretIndex="0"
                             FontFamily="Arial Unicode MS"
@@ -110,60 +138,48 @@
                             TextAlignment="Center" />
         <ComboBox x:Name="comboBox"
                   Grid.Column="1"
+                  Grid.ColumnSpan="2"
                   Width="147"
+                  Height="22"
                   Margin="0,125,0,0"
                   HorizontalAlignment="Left"
                   VerticalAlignment="Top"
                   Background="#FFE6D673"
-                BorderBrush="#FFD48E8E"
+                  BorderBrush="#FFD48E8E"
                   BorderThickness="0"
                   Foreground="Black"
                   ItemsSource="{Binding Path=Transport}"
                   SelectedIndex="{Binding SelectedTransport,
-                                          Mode=TwoWay}" Grid.ColumnSpan="2" Height="22" />
-        <Label x:Name="GetReady_Copy1"
-               Width="246"
-               Height="28"
-               Margin="50,185,0,0"
-               HorizontalAlignment="Left"
-               VerticalAlignment="Top"
-               Content="Choose your minor"
-               FontSize="13.333"
-               Foreground="White" Grid.ColumnSpan="2" />
-        <Label x:Name="GetReady_Copy2"
-               Width="246"
-               Height="28"
-               Margin="50,218,0,0"
-               HorizontalAlignment="Left"
-               VerticalAlignment="Top"
-               Content="Choose your subgroup"
-               FontSize="13.333"
-               Foreground="White" Grid.ColumnSpan="2" />
+                                          Mode=TwoWay}" />
         <ComboBox x:Name="comboBox_Copy"
                   Grid.Column="1"
+                  Grid.ColumnSpan="2"
                   Width="147"
+                  Height="22"
                   Margin="0,191,0,0"
                   HorizontalAlignment="Left"
                   VerticalAlignment="Top"
                   Background="#FFE6D673"
-                BorderBrush="#FFD48E8E"
+                  BorderBrush="#FFD48E8E"
                   BorderThickness="0"
                   Foreground="Black"
                   ItemsSource="{Binding Path=Minor}"
                   SelectedIndex="{Binding SelectedMinor,
-                                          Mode=TwoWay}" Grid.ColumnSpan="2" Height="22" />
+                                          Mode=TwoWay}" />
         <ComboBox x:Name="comboBox_Copy1"
-                  Width="85"
                   Grid.Column="1"
+                  Grid.ColumnSpan="2"
+                  Width="85"
+                  Height="22"
                   Margin="0,224,0,0"
                   HorizontalAlignment="Left"
                   VerticalAlignment="Top"
                   Background="#FFE6D673"
-                BorderBrush="#FFD48E8E"
+                  BorderBrush="#FFD48E8E"
                   BorderThickness="0"
                   Foreground="Black"
                   ItemsSource="{Binding Path=Subgroup}"
                   SelectedIndex="{Binding SelectedGroup,
-                                          Mode=TwoWay}" Grid.ColumnSpan="2" Height="22" />
+                                          Mode=TwoWay}" />
     </Grid>
 </Window>
