--- a/Arduino-Alarm/Priorities/PrioritiesView.xaml
+++ b/Arduino-Alarm/Priorities/PrioritiesView.xaml
@@ -5,8 +5,8 @@
         xmlns:local="clr-namespace:Arduino_Alarm"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="Set priorities"
-        Height="350"
         Width="504"
+        Height="350"
         mc:Ignorable="d">
     <Grid>
         <Grid.Background>
@@ -20,54 +20,43 @@
             <ColumnDefinition Width="249*" />
         </Grid.ColumnDefinitions>
         <Button x:Name="OK"
+                Width="108"
+                Height="41"
                 Margin="0,240,0,0"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Top"
-                Width="108"
-                Height="41" 
                 Background="#FF62E08A"
                 BorderBrush="#FFD48E8E"
-                Foreground="White"
-                FontSize="18"
-                BorderThickness="0" 
+                BorderThickness="0"
+                Click="OK_Click"
                 Content="OK"
-                Click="OK_Click" />
-        <Button x:Name="Cancel"
-                Grid.Column="1"
-                Margin="10,240,0,0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Background="#FFB155BF"
-                Foreground="White"
-                BorderBrush="#FFD48E8E"
-                Width="108" 
-                Height="41" 
                 FontSize="18"
-                Content="Cancel"
-                Click="Cancel_Click" />
+                Foreground="White" />
         <ListBox x:Name="listBox"
                  Width="126"
                  Height="137"
                  Margin="91,75,0,0"
-                 
                  HorizontalAlignment="Left"
-                 BorderBrush="Transparent"
                  VerticalAlignment="Top"
                  Background="Transparent"
-                 SelectedItem="{Binding Path=ItemsSelected, UpdateSourceTrigger=PropertyChanged}"   ItemsSource="{Binding List1, UpdateSourceTrigger=PropertyChanged}"
-                 SelectionMode="Multiple">
-  
-        </ListBox>
+                 BorderBrush="Transparent"
+                 ItemsSource="{Binding List1,
+                                       UpdateSourceTrigger=PropertyChanged}"
+                 SelectedItem="{Binding Path=ItemsSelected,
+                                        UpdateSourceTrigger=PropertyChanged}"
+                 SelectionMode="Multiple" />
         <ListBox x:Name="listBox_Copy"
                  Width="120"
                  Height="137"
                  Margin="162,60,0,0"
                  HorizontalAlignment="Left"
-                 SelectionMode="Multiple"
-                 SelectedItem="{Binding ItemsSelected2}"
-                 ItemsSource="{Binding Path=List2,UpdateSourceTrigger=PropertyChanged}"
-                 
-                 VerticalAlignment="Top" BorderBrush="#FF89A0CB" Visibility="Hidden">
+                 VerticalAlignment="Top"
+                 BorderBrush="#FF89A0CB"
+                 ItemsSource="{Binding Path=List2,
+                                       UpdateSourceTrigger=PropertyChanged}"
+                 Visibility="Hidden">
+
+            
             <ListBox.Background>
                 <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
                     <GradientStop Offset="0.368" Color="#FF3A1D1D" />
@@ -81,8 +70,30 @@
                HorizontalAlignment="Center"
                VerticalAlignment="Top"
                Content="CHOOSE SUBJECTS"
-               Foreground="White"
-               FontSize="20" />
+               FontSize="20"
+               Foreground="White" />
+        <Button x:Name="button2"
+                Grid.ColumnSpan="2"
+                Width="26"
+                Margin="0,0,0,20"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Background="#FF44ABBB"
+                BorderThickness="0"
+                Click="button2_Click"
+                Content="&gt;&gt;"
+                Foreground="White" />
+        <Button x:Name="button"
+                Width="26"
+                Margin="136,125,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FF8B5656"
+                BorderBrush="#FFD48E8E"
+                BorderThickness="0"
+                Click="button_Click"
+                Content="&lt;&lt;"
+                Visibility="Hidden" />
         <Label x:Name="label1"
                Grid.Column="0"
                Margin="0,37,26,0"
@@ -90,6 +101,19 @@
                VerticalAlignment="Top"
                Content="Very important subjects"
                Foreground="White" />
+        <Button x:Name="Cancel"
+                Grid.Column="1"
+                Width="108"
+                Height="41"
+                Margin="10,240,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Background="#FFB155BF"
+                BorderBrush="#FFD48E8E"
+                Click="Cancel_Click"
+                Content="Cancel"
+                FontSize="18"
+                Foreground="White" />
         <Label x:Name="label2"
                Grid.Column="1"
                Margin="26,37,0,0"
@@ -97,24 +121,5 @@
                VerticalAlignment="Top"
                Content="Important subjects"
                Foreground="White" />
-        <Button x:Name="button2"
-                Width="26"
-                Margin="0,0,0,20"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Background="#FF44ABBB"
-                Foreground="White"
-               
-                BorderThickness="0"
-                Content="&gt;&gt;" Click="button2_Click" Grid.ColumnSpan="2" />
-        <Button x:Name="button" Content="&lt;&lt;"
-                Width="26"
-                Visibility="Hidden"
-                Margin="136,125,0,0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Background="#FF8B5656"
-                BorderBrush="#FFD48E8E"
-                BorderThickness="0" Click="button_Click"/>
     </Grid>
 </Window>
