--- a/Arduino-Alarm/EnterSettings/SettingsView.xaml
+++ b/Arduino-Alarm/EnterSettings/SettingsView.xaml
@@ -9,14 +9,10 @@
         Width="504"
         Height="350"
         mc:Ignorable="d">
-    <Grid>
-        <Grid.Background>
-            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                <GradientStop Offset="0.368" Color="#FF3A1D1D" />
-                <GradientStop Offset="1" Color="#FF763232" />
-            </LinearGradientBrush>
-        </Grid.Background>
+    <Grid Background="#FF00527A">
 
+        
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="247*" />
             <ColumnDefinition Width="249*" />
@@ -36,13 +32,15 @@
                 Margin="0,0,0,20"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Bottom"
-                Background="#FF62E08A"
-                BorderBrush="#FFD48E8E"
+                Background="#FF2ED5AF"
                 BorderThickness="0"
                 Click="OK_Click"
                 Content="OK"
                 FontSize="18"
-                Foreground="White" />
+                Foreground="White"
+                
+                
+            />
         <Label x:Name="Adress"
                Width="120"
                Height="28"
@@ -98,8 +96,8 @@
                 Margin="9,0,0,20"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Bottom"
-                Background="#FFB155BF"
-                BorderBrush="#FFD48E8E"
+                BorderThickness="0"
+                Background="#FF2ED5AF"
                 Click="Cancel_Click"
                 Content="Cancel"
                 FontSize="18"
@@ -181,5 +179,8 @@
                   ItemsSource="{Binding Path=Subgroup}"
                   SelectedIndex="{Binding SelectedGroup,
                                           Mode=TwoWay}" />
+        <Image Grid.Column="1" HorizontalAlignment="Right" Height="51" Margin="0,15,20,0" VerticalAlignment="Top" Width="57" Source="/Arduino-Alarm;component/Resources/alarm2.jpg"/>
+
+
     </Grid>
 </Window>
