--- a/Arduino-Alarm/Priorities/PrioritiesView.xaml
+++ b/Arduino-Alarm/Priorities/PrioritiesView.xaml
@@ -5,50 +5,45 @@
         xmlns:local="clr-namespace:Arduino_Alarm"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="Set priorities"
-        Width="300"
-        Height="300"
+        Width="504"
+        Height="350"
         mc:Ignorable="d">
-    <Grid>
-        <Grid.Background>
-            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                <GradientStop Offset="0.368" Color="#FF3A1D1D" />
-                <GradientStop Offset="1" Color="#FF763232" />
-            </LinearGradientBrush>
-        </Grid.Background>
+    <Grid Background="#FF00527A">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="247*"/>
+            <ColumnDefinition Width="249*"/>
+        </Grid.ColumnDefinitions>
         <Button x:Name="OK"
-                Width="126"
-                Margin="10,224,0,0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Background="#FF8B5656"
-                BorderBrush="#FFD48E8E"
+               Width="108"
+                Height="41"
+                 Margin="0,0,136,20"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Background="#FF2ED5AF"
+                BorderBrush="Transparent"
                 BorderThickness="0"
+                FontSize="18"
                 Content="OK"
-                Foreground="White" Click="OK_Click" />
+                Foreground="White" Click="OK_Click" Grid.Column="1" />
         <Button x:Name="Cancel"
-                Width="120"
-                Margin="162,224,0,0"
+                Width="108"
+                Height="41"
+                Margin="139,0,0,20"
                 HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Background="#FF8B5656"
-                BorderBrush="#FFD48E8E"
+                VerticalAlignment="Bottom"
+                Background="#FF2ED5AF"
+                BorderBrush="Transparent"
                 Content="Cancel"
+                FontSize="18"
                 Foreground="White" Click="Cancel_Click" />
         <ListBox x:Name="listBox"
                  Width="126"
                  Height="137"
-                 Margin="10,60,0,0"
+                 Margin="95,100,0,0"
                  ItemsSource="{Binding List1}"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
-                 SelectedItem="{Binding ItemSelected}" SelectionMode="Single" SelectionChanged="listBox_SelectionChanged">
-            <ListBox.Background>
-                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                    <GradientStop Offset="0.368" Color="#FF3A1D1D" />
-                    <GradientStop Offset="1" Color="#FF763232" />
-                </LinearGradientBrush>
-            </ListBox.Background>
-        </ListBox>
+                 SelectedItem="{Binding ItemSelected}" SelectionMode="Single" SelectionChanged="listBox_SelectionChanged" Background="{x:Null}" BorderBrush="{x:Null}"/>
         <ListBox x:Name="listBox_Copy"
                  Width="120"
                  Height="137"
@@ -57,7 +52,7 @@
                  ItemsSource="{Binding List2}"
                  SelectionMode="Multiple"
                  SelectedItem="{Binding ItemsSelected2}"
-                 VerticalAlignment="Top" BorderBrush="#FF89A0CB" Visibility="Hidden">
+                 VerticalAlignment="Top" BorderBrush="#FF89A0CB" Visibility="Hidden" Grid.ColumnSpan="2">
             <ListBox.Background>
                 <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
                     <GradientStop Offset="0.368" Color="#FF3A1D1D" />
@@ -66,32 +61,36 @@
             </ListBox.Background>
         </ListBox>
         <Label x:Name="label"
-               Margin="91,10,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="CHOOSE SUBJECTS"
-               Foreground="White" />
+               Margin="30,20,0,0"
+               FontSize="32"
+               Foreground="White" Grid.ColumnSpan="2"
+ />
         <Label x:Name="label1"
-               Margin="5,34,0,0"
+               Margin="85,74,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Very important subjects"
                Foreground="White" />
         <Label x:Name="label2"
-               Margin="168,34,0,0"
+               Margin="35,74,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Important subjects"
-               Foreground="White" />
+               Foreground="White" Grid.Column="1" />
         <Button x:Name="button2"
-                Width="26"
-                Margin="136,98,0,0"
+                Width="46"
+                Margin="221,142,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
-                Background="#FF8B5656"
-                BorderBrush="#FFD48E8E"
                 BorderThickness="0"
-                Content="&gt;&gt;" Click="button2_Click" />
+                Content="" Click="button2_Click" BorderBrush="Transparent" Height="45" Grid.ColumnSpan="2" >
+            <Button.Background>
+                <ImageBrush ImageSource="/Arduino-Alarm;component/Resources/1458404680_DoubleChevronRight.png"/>
+            </Button.Background>
+        </Button>
         <Button x:Name="button" Content="&lt;&lt;"
                 Width="26"
                 Visibility="Hidden"
@@ -101,5 +100,6 @@
                 Background="#FF8B5656"
                 BorderBrush="#FFD48E8E"
                 BorderThickness="0" Click="button_Click"/>
+        <Image Grid.Column="1" HorizontalAlignment="Right" Height="51" Margin="0,15,20,0" VerticalAlignment="Top" Width="57" Source="/Arduino-Alarm;component/Resources/alarm2.jpg"/>
     </Grid>
 </Window>
