--- a/Arduino-Alarm/EnterSettings/SettingsView.xaml
+++ b/Arduino-Alarm/EnterSettings/SettingsView.xaml
@@ -111,7 +111,7 @@
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  Background="#FFE6D673"
-                 BorderBrush="#FFD48E8E"
+                 BorderBrush="Transparent"
                  FontSize="13.333"
                  Foreground="Black"
                  Text="{Binding Address}"
@@ -125,7 +125,7 @@
                             HorizontalAlignment="Left"
                             VerticalAlignment="Top"
                             Background="#FFE6D673"
-                            BorderBrush="#FFD48E8E"
+                            BorderBrush="Transparent"
                             BorderThickness="0"
                             CaretIndex="0"
                             FontFamily="Arial Unicode MS"
