--- a/Arduino-Alarm/MainWindow.xaml
+++ b/Arduino-Alarm/MainWindow.xaml
@@ -7,6 +7,7 @@
         Title="Enjoy your sleep. Take a time."
         Width="525"
         Height="350"
+        ResizeMode="NoResize"
         mc:Ignorable="d">
     <Grid Background="#FF00527A">
         <Grid.ColumnDefinitions>
