--- a/Arduino-Alarm/Priorities/PrioritiesView.xaml
+++ b/Arduino-Alarm/Priorities/PrioritiesView.xaml
@@ -7,6 +7,7 @@
         Title="Set priorities"
         Width="300"
         Height="300"
+        ResizeMode="NoResize"
         mc:Ignorable="d">
     <Grid>
         <Grid.Background>
